Fixed horizontal scrolling issue

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -10,6 +10,7 @@ body {
     width: 100%;
     height: 100%;
     background: #bbb;
+    overflow-x: hidden;
 }
 body {
     font-family: "Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif;
